err/smache.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/benchmark'...
Compiling './lib/python3.5/site-packages/benchmark/db_helper.py'...
***   File "./lib/python3.5/site-packages/benchmark/db_helper.py", line 42
    print User._get_db()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/benchmark/multiprocess_bm.py'...
***   File "./lib/python3.5/site-packages/benchmark/multiprocess_bm.py", line 23
    print "WE HAVE {} WORKERS WORKING".format(workers_working)
                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/benchmark/tests'...
Listing './lib/python3.5/site-packages/blinker'...
Listing './lib/python3.5/site-packages/blinker-1.4.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/dagger'...
Compiling './lib/python3.5/site-packages/dagger/dagger.py'...
***   File "./lib/python3.5/site-packages/dagger/dagger.py", line 71
    if type(item) <> ldict_node:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dagger-1.3.0.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/example'...
Compiling './lib/python3.5/site-packages/example/test.py'...
***   File "./lib/python3.5/site-packages/example/test.py", line 9
    print "COMPUTING VALUE FOR FIRST TIME..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/mongoengine'...
Listing './lib/python3.5/site-packages/mongoengine/base'...
Listing './lib/python3.5/site-packages/mongoengine/queryset'...
Listing './lib/python3.5/site-packages/mongoengine-0.10.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.0.egg-info'...
Listing './lib/python3.5/site-packages/rq'...
Listing './lib/python3.5/site-packages/rq/cli'...
Listing './lib/python3.5/site-packages/rq/compat'...
Listing './lib/python3.5/site-packages/rq/contrib'...
Listing './lib/python3.5/site-packages/rq/scripts'...
Listing './lib/python3.5/site-packages/rq-0.5.6.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/smache'...
Listing './lib/python3.5/site-packages/smache/data_sources'...
Listing './lib/python3.5/site-packages/smache/dependency_graphs'...
Listing './lib/python3.5/site-packages/smache/stores'...
Compiling './lib/python3.5/site-packages/smache/testing.py'...
***   File "./lib/python3.5/site-packages/smache/testing.py", line 51
    print "WARNING: The computed function {} used data from the " \
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/smache-0.0.9.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
